--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -17,8 +17,12 @@ a {
   text-decoration: none;
 }
 
-html {
-  color-scheme: dark;
+// html {
+//   color-scheme: dark;
+// }
+
+button {
+  cursor: pointer;
 }
 
 .container {
