--- a/src/appPages/site/components/pages/HomePage.module.scss
+++ b/src/appPages/site/components/pages/HomePage.module.scss
@@ -34,6 +34,8 @@
             height: 50px;
             padding-left: 20px;
             border-radius: 50px;
+            outline: none;
+            color: black;
           }
           button {
             position: absolute;
