--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -17,9 +17,9 @@ a {
   text-decoration: none;
 }
 
-// html {
-//   color-scheme: dark;
-// }
+html {
+  color-scheme: dark;
+}
 
 button {
   cursor: pointer;
