--- a/src/appPages/site/components/pages/homeSection/HomeSection.module.scss
+++ b/src/appPages/site/components/pages/homeSection/HomeSection.module.scss
@@ -1,55 +1,63 @@
-.homeCinema {
-    h1 {
-        font-size: 30px;
-        margin-bottom: 40px;
-        font-weight: 700;
-    }
+.mainSection {
+  text-align: center;
+  h1 {
+    font-size: 30px;
+    margin-bottom: 40px;
+    font-weight: 700;
+  }
+  .homeCinema {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    align-items: center;
+
     .homeBlock {
+      display: flex;
+      align-items: start;
+      flex-direction: column;
+      gap: 10px;
+      width: 300px;
+      height: 550px;
+      // background: red;
+      .homeImg {
+        padding: 5px;
+        border: 2px solid rgba(128, 128, 128, 0.342);
+        border-radius: 10px;
+        width: 100%;
+      }
+      .homeText {
         display: flex;
         align-items: start;
         flex-direction: column;
-        gap: 10px;
-        width: 300px;
-        height: 550px;
-        // background: red;
-        .homeImg {
-            padding: 5px;
-            border: 2px solid rgba(128, 128, 128, 0.342);
-            border-radius: 10px;
-            width: 100%;
+        gap: 5px;
+        cursor: pointer;
+        h2 {
+          font-size: 20px;
+          font-weight: 600;
         }
-        .homeText {
+        .date {
+          display: flex;
+          align-items: center;
+          h3 {
+            font-weight: 600;
+            color: gray;
+            margin-right: 20px;
+          }
+          .cinemaStar {
             display: flex;
             align-items: start;
-            flex-direction: column;
-            gap: 5px;
-            cursor: pointer;
-            h2 {
-                font-size: 20px;
-                font-weight: 600;
+            a {
+              font-size: 20px;
             }
-            .date {
-                display: flex;
-                align-items: center;
-                h3 {
-                    font-weight: 600;
-                    color: gray;
-                    margin-right: 20px;
-                }
-                .cinemaStar {
-                    display: flex;
-                    align-items: start;
-                    a {
-                        font-size: 20px;
-                    }
-                    h4 {
-                        color: rgba(0, 0, 255, 0.513);
-                        font-size: 15px;
-                        font-weight: 600;
-                        margin-left: 5px;
-                    }
-                }
+            h4 {
+              color: rgba(0, 0, 255, 0.513);
+              font-size: 15px;
+              font-weight: 600;
+              margin-left: 5px;
             }
+          }
         }
+      }
     }
+  }
 }
