--- a/src/appPages/site/components/pages/movieSection/MovieInfo.module.scss
+++ b/src/appPages/site/components/pages/movieSection/MovieInfo.module.scss
@@ -1,5 +1,5 @@
 .movie {
-    background-image: url(https://inkorr.com/uploads/1707758417_.jpg);
+  background-image: url(https://inkorr.com/uploads/1707758417_.jpg);
   .movieBg {
     background: #000000be;
     padding: 20px;
@@ -8,7 +8,7 @@
       align-items: start;
       flex-direction: column;
       color: white;
-    //   gap: 50px;
+      //   gap: 50px;
       .movieDetails {
         display: flex;
         align-items: center;
@@ -75,16 +75,69 @@
           }
         }
       }
-      .movieVideo {
-        display: flex;
-        align-items: start;
-        flex-direction: column;
-        gap: 20px;
-        iframe {
-          width: 900px;
-          height: 500px;
-        }
-      }
     }
   }
+}
+// !watch video
+// .movieVideo {
+//   display: flex;
+//   align-items: center;
+//   flex-direction: column;
+//   justify-content: center;
+//   width: 90%;
+//   margin: 0 auto;
+//   background: #000;
+//   video {
+//     width: 90%;
+//     height: 30%;
+//   }
+// }
+
+.movieVideo {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #000;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+}
+
+.movieTitle {
+  font-size: 2.5rem;
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+.videoContainer {
+  width: 70%;
+  overflow: hidden;
+  border-radius: 15px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+  position: relative;
+  cursor: pointer;
+}
+
+.video {
+  width: 100%;
+  height: auto;
+  border-radius: 15px;
+}
+
+.playButton {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 4rem;
+  color: rgba(255, 255, 255, 0.8);
+  pointer-events: none;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.videoContainer:hover .playButton {
+  opacity: 0.9;
 }
