--- a/src/appPages/auth/components/pages/SignInPage.module.scss
+++ b/src/appPages/auth/components/pages/SignInPage.module.scss
@@ -1,4 +1,4 @@
-.authLogIn {
+.authSignIn {
   background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20220322/pngtree-background-biru-keren-dan-kosong-abstract-untuk-template-desain-powerpoint-ppt-image_1067979.jpg);
   background-size: cover;
   background-position: center;
@@ -10,7 +10,7 @@
     backdrop-filter: blur(10px);
     padding-top: 80px;
     .login {
-      width: 400px;
+      width: 500px;
       height: 600px;
       background: white;
       display: flex;
@@ -19,72 +19,19 @@
       justify-content: center;
       border-radius: 20px;
       gap: 30px;
-      h1 {
-        font-size: 30px;
-        font-weight: 700;
+      h2 {
+        font-size: 20px;
+        font-weight: 600;
       }
       .inputs {
         display: flex;
         align-items: center;
         flex-direction: column;
-        gap: 40px;
-        .loginName {
+        gap: 30px;
+        .dataSignUp {
           display: flex;
-          align-items: start;
           flex-direction: column;
           gap: 20px;
-          h2 {
-            font-size: 16px;
-            font-weight: 700;
-          }
-          .name {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            border-bottom: 2px solid rgba(128, 128, 128, 0.301);
-            width: 300px;
-
-            a {
-              color: gray;
-              font-size: 16px;
-              margin-bottom: 10px;
-            }
-            input {
-              padding-bottom: 5px;
-              outline: none;
-            }
-          }
-        }
-        .loginPassword {
-          display: flex;
-          align-items: start;
-          flex-direction: column;
-          gap: 20px;
-          h2 {
-            font-size: 16px;
-            font-weight: 700;
-          }
-          .password {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            border-bottom: 2px solid rgba(128, 128, 128, 0.301);
-            width: 300px;
-            a {
-              color: gray;
-              font-size: 18px;
-              margin-bottom: 10px;
-            }
-            input {
-              padding-bottom: 5px;
-              outline: none;
-            }
-            h5 {
-              cursor: pointer;
-              margin-left: 20px;
-              font-size: 16px;
-            }
-          }
         }
         button {
           background: rgb(4, 251, 223);
@@ -101,36 +48,24 @@
           color: white;
         }
       }
-      .using {
+      .createGoogle {
         display: flex;
         align-items: center;
-        justify-content: center;
+        gap: 10px;
+        cursor: pointer;
         width: 300px;
         height: 40px;
-        border: 2px solid gray;
+        border: 2px solid rgba(128, 128, 128, 0.466);
+        display: flex;
+        justify-content: center;
         border-radius: 50px;
-        gap: 10px;
-        h4 {
+        h1 {
+          font-size: 16px;
           font-weight: 600;
         }
         a {
-            font-size: 27px;
+          font-size: 25px;
         }
-      }
-      h3 {
-        color: gray;
-        font-size: 17px;
-        font-weight: 500;
-        display: flex;
-        align-items: center;
-        gap: 5px;
-        cursor: pointer;
-      }
-      h3:hover {
-        transform: scale(1.1);
-        transition: 0.8s;
-        color: black;
-        font-weight: 600;
       }
     }
   }
